...

class CoreData {
	class func createDemoData() -> [AnyObject] {
		var goals = [AnyObject]()
		let goal1Name = "Start Up Company"
		let goal2Name = "Write For Forbes"
		let goal3Name = "Become Master Cook"
		let goal4Name = "Skiing Trip"
		let goal5Name = "Learn To Code"
		
		goals.insert(CoreData.createGoal(name: goal1Name), at: 0)
		goals.insert(CoreData.createGoal(name: goal2Name), at: 0)
		goals.insert(CoreData.createGoal(name: goal3Name), at: 0)
...
		CoreData.createTask(goalName: goal1Name, type: "Financial" as AnyObject, when: Date(), reason: "Discuss Financials" as AnyObject)
		CoreData.createTask(goalName: goal1Name, type: "Financial" as AnyObject, when: Date(), reason: "Discuss Financials" as AnyObject)
		CoreData.createTask(goalName: goal2Name, type: "Financial" as AnyObject, when: Date(), reason: "Discuss Financials" as AnyObject)
		CoreData.createTask(goalName: goal3Name, type: "Hobbies" as AnyObject, when: Date(), reason: "Learn 5 new recipes" as AnyObject)
		CoreData.createTask(goalName: goal3Name, type: "Health" as AnyObject, when: Date(), reason: "Only eat protein & veg" as AnyObject)
		CoreData.createTask(goalName: goal3Name, type: "Financial" as AnyObject, when: Date(), reason: "Buy in bulk" as AnyObject)
		CoreData.createTask(goalName: goal3Name, type: "Efficiency" as AnyObject, when: Date(), reason: "Meal prep" as AnyObject)
		CoreData.createTask(goalName: goal4Name, type: "Financial" as AnyObject, when: Date(), reason: "Discuss Financials" as AnyObject)
		CoreData.createTask(goalName: goal4Name, type: "Financial" as AnyObject, when: Date(), reason: "Discuss Financials" as AnyObject)
		CoreData.createTask(goalName: goal5Name, type: "Financial" as AnyObject, when: Date(), reason: "Discuss Financials" as AnyObject)
		
		return goals
	}
...
